# postmodern-python

./: .envrc  .gitignore  LICENSE  README.md  copier.yml  ctt.toml  pyproject.toml
.github/workflows/: pytest.yml  test-template.yml
template/: README.md  README.md.jinja  pyproject.toml.jinja  {{ '.envrc' if include_direnv }}.jinja  {{ '.pre-commit-config.yaml' if include_precommit }}.jinja  {{ 'Dockerfile' if include_dockerfile }}.jinja  {{ 'mkdocs.yml' if include_mkdocs }}.jinja  {{ 'zensical.toml' if include_docs }}.jinja
template/.github/: dependabot.yml.jinja
template/.github/workflows/: update-coverage-badge.yml
template/{{ 'docs' if include_docs }}/: index.md.jinja  reference.md.jinja
template/{{ 'docs' if include_mkdocs }}/: index.md.jinja
tests/: conftest.py  test_template.py
