[project]
name = "postmodern-python"
version = "0.1.0"
description = "Tooling configuration for the Postmodern Python Copier template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "copier-template-tester>=2.2.0",
    "pytest>=8.4.2",
    "pytest-copie>=0.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
